<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.DayFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        android:scaleType="fitXY"
        android:src="@drawable/background_clouds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:backgroundTint="@color/card_view_bg"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@id/scroll_view_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="30/10/2022 13:00" />

            <ImageView
                android:id="@+id/im_weather"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@id/tv_current_temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="St. Petersburg" />

            <TextView
                android:id="@+id/tv_current_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="70sp"
                app:layout_constraintBottom_toTopOf="@id/fab_week"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="20°C" />

            <TextView
                android:id="@+id/tv_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_current_temp"
                tools:text="Sunny" />

            <TextView
                android:id="@+id/tv_max_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_condition"
                tools:text="22°C/15°C" />

            <ImageButton
                android:id="@+id/ib_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@null"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search_24"
                app:layout_constraintBottom_toBottomOf="@+id/tv_condition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_condition" />

            <ImageButton
                android:id="@+id/ib_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:contentDescription="@string/update"
                android:src="@drawable/ic_sync_24"
                app:layout_constraintBottom_toBottomOf="@+id/tv_condition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_condition" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:contentDescription="@string/back"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/white"
                app:srcCompat="@drawable/ic_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/scroll_view_holder"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="1dp"
        android:backgroundTint="@color/card_view_bg"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_temp_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-7°C"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/night"
                />

            <ImageView
                android:id="@+id/im_weather_night"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_condition_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sunny"
                app:layout_constraintBottom_toBottomOf="@+id/im_weather_night"
                app:layout_constraintStart_toEndOf="@id/im_weather_night"
                app:layout_constraintTop_toTopOf="@id/im_weather_night" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25"/>

            <TextView
                android:id="@+id/morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_middle"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_temp_morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-7°C"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/morning"
                />

            <ImageView
                android:id="@+id/im_weather_morning"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_left" />

            <TextView
                android:id="@+id/tv_condition_morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sunny"
                app:layout_constraintBottom_toBottomOf="@+id/im_weather_morning"
                app:layout_constraintStart_toEndOf="@id/im_weather_morning"
                app:layout_constraintTop_toTopOf="@id/im_weather_morning" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_temp_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-7°C"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintTop_toBottomOf="@id/day"
                />

            <ImageView
                android:id="@+id/im_weather_day"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_middle" />

            <TextView
                android:id="@+id/tv_condition_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sunny"
                app:layout_constraintBottom_toBottomOf="@+id/im_weather_day"
                app:layout_constraintStart_toEndOf="@id/im_weather_day"
                app:layout_constraintTop_toTopOf="@id/im_weather_day" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75"/>

            <TextView
                android:id="@+id/evening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evening"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="@id/guideline_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_temp_evening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-7°C"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@id/guideline_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/evening"
                />

            <ImageView
                android:id="@+id/im_weather_evening"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_right" />

            <TextView
                android:id="@+id/tv_condition_evening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sunny"
                app:layout_constraintBottom_toBottomOf="@+id/im_weather_evening"
                app:layout_constraintStart_toEndOf="@id/im_weather_evening"
                app:layout_constraintTop_toTopOf="@id/im_weather_evening" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>